internal/gatewayapi/testdata/xlistenerset-tlsroute.in.yaml
namespaces:
- apiVersion: v1
  kind: Namespace
  metadata:
    name: gateway-xls
    labels:
      allow-xls: "true"
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: gateway-xls
    name: composite-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    allowedListeners:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allow-xls: "true"
    listeners:
    - name: core-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
xListenerSets:
- apiVersion: gateway.networking.x-k8s.io/v1alpha1
  kind: XListenerSet
  metadata:
    namespace: gateway-xls
    name: tls-xls
  spec:
    parentRef:
      name: composite-gateway
    listeners:
    - name: extra-tls-passthrough
      protocol: TLS
      port: 8443
      tls:
        mode: Passthrough
      allowedRoutes:
        kinds:
          - kind: TLSRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: All
    - name: extra-tls-terminate
      protocol: TLS
      port: 9443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-secret-1
      allowedRoutes:
        kinds:
          - kind: TLSRoute
            group: gateway.networking.k8s.io
        namespaces:
          from: All
tlsRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tls-app-passthrough
    spec:
      parentRefs:
        - group: gateway.networking.x-k8s.io
          kind: XListenerSet
          namespace: gateway-xls
          name: tls-xls
          sectionName: extra-tls-passthrough
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
              namespace: default
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tls-app-terminate
    spec:
      parentRefs:
        - group: gateway.networking.x-k8s.io
          kind: XListenerSet
          namespace: gateway-xls
          name: tls-xls
          sectionName: extra-tls-terminate
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
              namespace: default
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: gateway-xls
      name: tls-secret-1
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFEREF0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKbEk2WXhFOVprQ1BzNnBDUXhickNtZWl4OVA1RGZ4OVJ1NUxENFQKSm1kVzdJS2R0UVYvd2ZMbXRzdTc2QithVGRDaldlMEJUZmVPT1JCYlIzY1BBRzZFbFFMaWNsUVVydW4zcStncwpKcEsrSTdjSStqN [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ2QwZlBDYWtweE1nUnUKT0VXQjFiQk5FM3ZseW55aTZWbkV2VWF1OUhvakR2UHVPTFJIaGI4MmoyY1ovMHhnL1lKR09LelBuV2JERkxGNApHdWh3dDRENmFUR0xYNklPODEwTDZ0SXZIWGZNUXRJS2VwdTZ3K3p1WVo4bG1yejB1RjZlWEtqamVIbHhyb2ZrCnVNekM3OUVaU0lYZlZlczJ1SmdVRSs4VGFzSDUzQ2Y4MFNSRGlIeEdxckttdVNjWCtwejBreGdCZ1VWYTVVS20KUWdTZDFmVUxLOUEwNXAxOXkrdURPM204bVhRNkxVQ0N1STFwZHNROGFlNS9zamlxa0VjWlJjMTdWYVgxWjVVaQpvcGZnNW9SY05VT [...]
