internal/gatewayapi/testdata/xlistenerset-tlsroute.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: composite-gateway
    namespace: gateway-xls
  spec:
    allowedListeners:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            allow-xls: "true"
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: core-http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: core-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  gateway-xls/composite-gateway:
    proxy:
      listeners:
      - address: null
        name: gateway-xls/composite-gateway/core-http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      - address: null
        name: gateway-xls/composite-gateway/gateway-xls/tls-xls/extra-tls-passthrough
        ports:
        - containerPort: 8443
          name: tls-8443
          protocol: TLS
          servicePort: 8443
      - address: null
        name: gateway-xls/composite-gateway/gateway-xls/tls-xls/extra-tls-terminate
        ports:
        - containerPort: 9443
          name: tls-9443
          protocol: TLS
          servicePort: 9443
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: composite-gateway
          gateway.envoyproxy.io/owning-gateway-namespace: gateway-xls
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: gateway-xls/composite-gateway
      namespace: envoy-gateway-system
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    name: tls-app-passthrough
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: tls-xls
      namespace: gateway-xls
      sectionName: extra-tls-passthrough
    rules:
    - backendRefs:
      - name: service-1
        namespace: default
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.x-k8s.io
        kind: XListenerSet
        name: tls-xls
        namespace: gateway-xls
        sectionName: extra-tls-passthrough
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    name: tls-app-terminate
    namespace: default
  spec:
    parentRefs:
    - group: gateway.networking.x-k8s.io
      kind: XListenerSet
      name: tls-xls
      namespace: gateway-xls
      sectionName: extra-tls-terminate
    rules:
    - backendRefs:
      - name: service-1
        namespace: default
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.x-k8s.io
        kind: XListenerSet
        name: tls-xls
        namespace: gateway-xls
        sectionName: extra-tls-terminate
xListenerSets:
- apiVersion: gateway.networking.x-k8s.io/v1alpha1
  kind: XListenerSet
  metadata:
    name: tls-xls
    namespace: gateway-xls
  spec:
    listeners:
    - allowedRoutes:
        kinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
        namespaces:
          from: All
      name: extra-tls-passthrough
      port: 8443
      protocol: TLS
      tls:
        mode: Passthrough
    - allowedRoutes:
        kinds:
        - group: gateway.networking.k8s.io
          kind: TLSRoute
        namespaces:
          from: All
      name: extra-tls-terminate
      port: 9443
      protocol: TLS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: tls-secret-1
          namespace: secret
        mode: Terminate
    parentRef:
      group: null
      kind: null
      name: composite-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: All listeners are valid
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: All listeners are valid
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: extra-tls-passthrough
      port: 8443
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: extra-tls-terminate
      port: 9443
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TLSRoute
xdsIR:
  gateway-xls/composite-gateway:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-gateway-xls-composite-gateway-e1ee602f
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: gateway-xls/composite-gateway
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-gateway-xls-composite-gateway-e1ee602f
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: gateway-xls/composite-gateway
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      isHTTP2: false
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: core-http
      name: gateway-xls/composite-gateway/core-http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 8443
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: extra-tls-passthrough
      name: gateway-xls/composite-gateway/gateway-xls/tls-xls/extra-tls-passthrough
      port: 8443
      routes:
      - destination:
          metadata:
            kind: TLSRoute
            name: tls-app-passthrough
            namespace: default
          name: tlsroute/default/tls-app-passthrough/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: tlsroute/default/tls-app-passthrough/rule/-1/backend/0
            protocol: HTTPS
            weight: 1
        metadata:
          kind: TLSRoute
          name: tls-app-passthrough
          namespace: default
        name: tlsroute/default/tls-app-passthrough
        tls:
          inspector:
            snis:
            - '*'
    - address: 0.0.0.0
      externalPort: 9443
      metadata:
        kind: Gateway
        name: composite-gateway
        namespace: gateway-xls
        sectionName: extra-tls-terminate
      name: gateway-xls/composite-gateway/gateway-xls/tls-xls/extra-tls-terminate
      port: 9443
      routes:
      - destination:
          metadata:
            kind: TLSRoute
            name: tls-app-terminate
            namespace: default
          name: tlsroute/default/tls-app-terminate/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: tlsroute/default/tls-app-terminate/rule/-1/backend/0
            protocol: HTTPS
            weight: 1
        metadata:
          kind: TLSRoute
          name: tls-app-terminate
          namespace: default
        name: tlsroute/default/tls-app-terminate
        tls:
          inspector:
            snis:
            - '*'
          terminate:
            alpnProtocols: []
            certificates:
            - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFEREF0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKbEk2WXhFOVprQ1BzNnBDUXhickNtZWl4OVA1RGZ4OVJ1NUxENFQKSm1kVzdJS2R0UVYvd2ZMbXRzdTc2QithVGRDaldlMEJUZmVPT1JCYlIzY1BBRzZFbFFMaWNsUVVydW4zcStncwpKc [...]
              name: secret/tls-secret-1
              privateKey: '[redacted]'
      tls:
        alpnProtocols: []
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUREVENDQWZXZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFEREF0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFKbEk2WXhFOVprQ1BzNnBDUXhickNtZWl4OVA1RGZ4OVJ1NUxENFQKSm1kVzdJS2R0UVYvd2ZMbXRzdTc2QithVGRDaldlMEJUZmVPT1JCYlIzY1BBRzZFbFFMaWNsUVVydW4zcStncwpKcEsrS [...]
          name: secret/tls-secret-1
          privateKey: '[redacted]'
